<?xml version="1.0"?>
<package>
  <name>descartes_core</name>
  <version>0.0.0</version>
  <description>The descartes_core package creates joint trajectories for trajectory plans. Trajectory plans are typically underdefined paths through space that allow for kinematic/dynamic tolerances, such as unspecified tool roll.</description>

  <maintainer email="dpsolomon@gmail.com">Dan Solomon</maintainer>

  <license>Apache2.0</license>
  <url type="website">https://github.com/industrial-moveit/descartes_core</url>

  <author email="dpsolomon@gmail.com">Dan Solomon</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>boost</build_depend>
  <build_depend>console_bridge</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>boost</run_depend>
  <run_depend>console_bridge</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>roscpp</run_depend>

  <export>
  </export>
</package>
